--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "unpkg": "dist/index.umd.js",
-  "types": "types/index.d.ts",
+  "types": "dist/types/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/src/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.cjs.js"
+    }
+  },
   "scripts": {
     "build": "rollup -c",
     "test": "vitest",
@@ -35,6 +42,7 @@
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cors": "^2.8.5",
     "eslint": "^8.0.0",
     "express": "^4.18.0",
     "jsdom": "^22.0.0",
