--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "forceConsistentCasingInFileNames": true,
         "lib": [
             "DOM",
+            "DOM.Iterable",
             "ESNext"
         ]
     },
