feat: Prepare package for npm publication
- Updated API endpoint to production URL: https://www.tagtics.online/new-feedback/{apiKey}
- Added LOCAL_DEV_ENDPOINT constant for contributors to test locally
- Removed config.endpoint option (simplified to production URL only)
- Added feedback text to payload
- Fixed TypeScript compilation to exclude server/ and test/ folders from dist
- Updated package.json types path to dist/types/index.d.ts
- Added 'files' field to package.json (only dist, README, LICENSE published)
- Enhanced README with detailed configuration documentation
- Added mutual exclusivity warning for includePaths/excludePaths
- Added regex pattern examples for path control

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
         ]
     },
     "include": [
-        "src/**/*",
-        "server/**/*",
-        "test/**/*"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "server",
+        "test",
+        "examples"
     ]
 }
